--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node main.js"
   },
   "dependencies": {
-    "aws-iot-device-sdk": "^2.2.1"
+    "aws-iot-device-sdk": "^2.2.1",
+    "crypto": "^1.0.1"
   }
 }
